--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
           product feature or website. Take a look at my work. If you like what
           you see and have a project you would like coded don’t hesitate to
           contact me. Press tab and enter to">
-        &nbspHey, there! I am a Web developer! I can help you build a
-        product, feature or website. Take a look at my work. If you like what
+        Hello! I am a Web developer with industry experience! I can help you build a
+        product, feature or website. If you like what
         you see and have a project you would like coded, don’t hesitate to
         contact me.
       </p>
