--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ I’m excited about the possibilities ahead and would love to connect with like-
           </ul>
         </li>
         <li class="tech-card frames" aria-label="Frameworks: Bootstrap, Ruby on rails, RSpec, Capibara, Selenium.">
-          <h2>Frameworks</h2>
+          <h2>Frameworks & Libraries</h2>
           <ul class="tech">
             <li>• React JS</li>
             <li>• React Native</li>
@@ -111,8 +111,9 @@ I’m excited about the possibilities ahead and would love to connect with like-
           </ul>
         </li>
         <li class="tech-card skills" aria-label="Skills: Codekit, Codepen, GitHub, GitLAb, Terminal.">
-          <h2>Skills</h2>
+          <h2>Databases & Skills</h2>
           <ul class="tech">
+            <li>• MySQL</li>
             <li>• AWS</li>
             <li>• Git/GitHub</li>
             <li>• OOP</li>
